--- a/WebContent/views/css/index.css
+++ b/WebContent/views/css/index.css
@@ -2,7 +2,8 @@
 
 html, body {
 	height: 100%;
-	overflow: hidden;
+	overflow-y:scroll;
+	overflow-x:hidden;
 	margin: 0px;
 	padding: 0px;
 }
@@ -12,7 +13,7 @@ html, body {
 }
 .content{
 	position: inherit;
-    margin: 0 0 0 250px;
+    margin: 0 0 0 240px;
     padding: 0 30px;
     margin-top: 51px; 
 }
@@ -43,4 +44,13 @@ html, body {
 .pull-center {
 	margin-left: 10px;
 	vertical-align: middle;
+}
+
+.panel-lable{
+	font-family: Microsoft YaHei;
+	font-size: 90%;
+}
+.panel-lable-help{
+	font-family: Microsoft YaHei;
+	font-size: 60%;
 }
