--- a/WebContent/views/css/index.css
+++ b/WebContent/views/css/index.css
@@ -6,8 +6,23 @@ html, body {
 	overflow-x:hidden;
 	margin: 0px;
 	padding: 0px;
+	font: 300 1em/1.8 PingFang SC, Lantinghei SC, Microsoft Yahei, Hiragino Sans GB, Microsoft Sans Serif, WenQuanYi Micro Hei, sans;
 }
-
+.header {
+	height: 50px;
+    background-color: #2c3742;
+}
+.header .navbar{
+   background:none !important;
+   border:0px !important;
+}
+.header .navbar .nav > li > a{
+   color:#fff !important;
+   font-size:13px !important;
+   border-bottom:0px !important;
+   margin-top:0px !important;
+   font-weight:bold;
+}
 .heightFill {
 	height: 100%;
 }
@@ -30,17 +45,23 @@ html, body {
 .nav>li {
 	position: relative;
 	display: block;
+
 }
 
 .nav>li>a {
-	font-family: Microsoft YaHei;
 	color: #337ab7;
 	position: relative;
 	display: block;
 	padding: 10px 15px;
 	background-color: transparent;
 }
-
+.nav>li>ul>li {
+	color: #337ab7;
+	position: relative;
+	display: block;
+	padding: 10px 15px;
+	background-color: transparent;
+}
 .pull-center {
 	margin-left: 10px;
 	vertical-align: middle;
